--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     "require": {
         "php": "^8.2",
         "cloudinary/cloudinary_php": "^3.1",
+        "laravel-notification-channels/webpush": "*",
+        "minishlink/web-push": "^9.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
